tests/cli/snapshots/main__cli__status__checksum_capability_disabled.snap
---
source: tests/cli/status.rs
expression: stdout
---
Total of migrations applied: 3

Capabilities
- Definition files: ✅
- Checksum: ❌

✅ Database migrations are up to date.
