tests/cli/snapshots/main__cli__status__fails_if_no_script_migration_definition.snap
---
source: tests/cli/status.rs
expression: stderr
---
Error: 
   0: The table 'script_migration' does not exist. Make sure to apply the migrations once before running this command.

[location]

Backtrace omitted. Run with RUST_BACKTRACE=1 environment variable to display it.
Run with RUST_BACKTRACE=full to include source snippets.
