tests/cli/snapshots/main__cli__status__no_migrations_applied.snap
---
source: tests/cli/status.rs
expression: stdout
---
Total of migrations applied: none

Capabilities
- Definition files: ✅
- Checksum: ✅

✅ Database migrations are up to date.
