tests/cli/snapshots/main__cli__status__with_migrations_left.snap
---
source: tests/cli/status.rs
expression: stdout
---
Total of migrations applied: 1 ↓2

Capabilities
- Definition files: ✅
- Checksum: ✅
