tests/cli/snapshots/main__cli__status__with_missing_migration_files.snap
---
source: tests/cli/status.rs
expression: stdout
---
Total of migrations applied: 3 ?1

Capabilities
- Definition files: ✅
- Checksum: ✅

❓ The following files seems to be missing:
- [timestamp]_AddPost
